fix: react date picker z-index

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -450,6 +450,10 @@ a {
   }
 }
 
+.react-datepicker-popper {
+  z-index: 1000;
+}
+
 // clearing a date input
 .react-datepicker__close-icon {
   &::after {
